@@ -1,3 +1,4 @@
+2013-06-07: various improvements to place_elec_on_surf
 2013-06-06: global managment of debug flags (eidors_debug)
 2013-06-03: allow specifying command line options for gmsh
 2013-05-29: ======================= RELEASE 3.7.1 ========================
